# mTracker

./: build.gradle  circleCiEnvironmentSetup.sh  local.properties  structure.pptx
.circleci/: config.yml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/lastkgb/mtracker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader.glslf  shader.glslv
app/src/main/cpp/: CubeG2.cpp  accelerometer.cpp  accelerometer.h  cube.cpp  cube.h  fusion.cpp  fusion.h  gyroscope.cpp  gyroscope.h  math.cpp  math.h  matrix.cpp  matrix.h  mylog.h  orientation.cpp  orientation.h  position.cpp  position.h  renderer.cpp  renderer.h  sensor.h
app/src/main/java/com/example/lastkgb/mtracker/: MainActivity.java  Position.java  RendererJNI.java  SixdofJNI.java  TrackerRenderer.java  TrackerSurfaceView.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/lastkgb/mtracker/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
